# djangofloors

./: .gitignore  manage.py  passenger_wsgi.py  pyproject.toml
Home/: admin.py  forms.py  models.py  urls.py  views.py
Home/static/: script.js  style.css
Home/templates/: base.html  contact_us.html
Home/templates/home/: about-us.html  concrete-floors.html  contacts.html  index.html  object.html  objects_list.html  polymer-floor.html  ready-solutions.html  solution.html  vacancies.html  vacancy.html
Home/templatetags/: global_context.py  my_filters.py
djangofloors/: asgi.py  prod_settings.py  settings.py  urls.py  wsgi.py
static/: script.js  style.css
